@@ -3504,6 +3504,19 @@ the last two being the forms available in all @Sl{} versions.  Here
 or a format string followed by arguments separated by commas.
 
 
+@subsection Error handling from FORTRAN
+@cindex Error handling from FORTRAN
+
+There are two interface function provided to call @code{error} and
+@code{warning} from Fortran code, in each case with a simple character
+string argument. They are defined as
+@example
+subroutine rexit(@var{message})
+subroutine rwarn(@var{message})
+@end example
+Messages of more than 255 character are truncated, with a warning.
+
+
 @node Random numbers, Missing and IEEE values, Error handling, The R API
 @section Random number generation
 @cindex Random numbers in C
